Border lines are visible in dark mode & top border fixed

--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -8551,14 +8551,16 @@ h1, h1, h3, h4, h5, h6 {
   color: var(--primary-color);
 }
 
-.playlist-item {
-  list-style-type: none;
-  border-bottom: 1px solid black;
-  border-left: 1px solid black;
-  border-right: 1px solid black;
+.playlist-item{
+  list-style-type: var(--primary-color);
+  border: 1px solid var(--secondary-color);
   cursor: pointer;
   padding: 1em;
   padding-left: 55px;
+}
+
+.playlist-item:first-child {
+  border-top: none;
 }
 
 .playlist-item.selected {
